--- a/config-ssl/config_URPC.yml
+++ b/config-ssl/config_URPC.yml
@@ -2,7 +2,7 @@ AL:
   budget: 0
   initial_labeled: 0.1
   query: 0.02
-  query_strategy: "OnlineMGQuery"
+  query_strategy: "URPCQuery"
 
 Dataset:
   data_dir: "data/ACDCprecessed"
@@ -11,7 +11,7 @@ Dataset:
   input_size: 192
 
 Training:
-  output_dir: "gn+bn+ds+linear+patience20"
+  output_dir: "URPC"
   device: "cuda:0"
   iter_max: 30000
   iter_valid: 100
@@ -24,15 +24,15 @@ Training:
   rampup_start: 2000
   rampup_end: 35000
   regularize_w: 0.1
-  rampup_mode: "linear"
+  rampup_mode: "sigmoid"
 
 
 Network:
   class_num: 4
-  ndf: 64
+  ndf: 16
   in_chns: 1
-  feature_grps: 4
-  norm_type: [ "group_norm", "batch_norm" ]
+  feature_grps: 1
+  norm_type: [ "batch_norm", "batch_norm" ]
   acti_func: "relu"
   dropout: true
   deep_supervision: "normal"
