调整配置文件

--- a/config-ssl/strategy.yml
+++ b/config-ssl/strategy.yml
@@ -11,7 +11,7 @@ OnlineMGQuery:
   <<: *base
   class: "OnlineMGQuery"
   trainer:
-    module: "util.newstyletrainer"
+    module: "util.trainer"
     class: "ConsistencyMGNetTrainer"
     additional_param: { }
 
