存档adaptive region-specific loss

--- a/config-ssl/config_ConsistencyMGNet.yml
+++ b/config-ssl/config_ConsistencyMGNet.yml
@@ -2,7 +2,7 @@ AL:
   budget: 0
   initial_labeled: 0.1
   query: 0.02
-  query_strategy: "OnlineMGQuery"
+  query_strategy: "OnlineMGQuery"ssh
 
 Dataset:
   data_dir: "data/ACDCprecessed"
