--- a/config-ISIC/config_URPC.yml
+++ b/config-ISIC/config_URPC.yml
@@ -2,17 +2,17 @@ AL:
   budget: 0
   initial_labeled: 0.1
   query: 0.02
-  query_strategy: "RandomQuery"
+  query_strategy: "URPCQuery"
 
 Dataset:
-  name: "ACDC"
-  data_dir: "data/ACDCprecessed"
+  name: "ISIC"
+  data_dir: "data/ISICPreprocessed"
   batch_size: 16
   num_workers: 3
   input_size: 192
 
 Training:
-  output_dir: "Baseline"
+  output_dir: "URPC"
   device: "cuda:0"
   iter_max: 30000
   iter_valid: 100
@@ -25,17 +25,18 @@ Training:
   rampup_start: 2000
   rampup_end: 35000
   regularize_w: 0.1
+  rampup_mode: "sigmoid"
 
 
 Network:
-  class_num: 4
+  class_num: 2
   ndf: 16
   in_chns: 1
   feature_grps: 1
-  norm_type: [ "instance_norm", "instance_norm" ]
+  norm_type: [ "batch_norm", "batch_norm" ]
   acti_func: "relu"
   dropout: true
-  deep_supervision: "none" #normal grouped none
+  deep_supervision: "normal"
   loose_sup: false
   class_focus_ensemble: false
 
