--- a/config-ISIC/config_Baseline.yml
+++ b/config-ISIC/config_Baseline.yml
@@ -1,15 +1,15 @@
 AL:
   budget: 0
-  initial_labeled: 0.1
+  initial_labeled: 0.03
   query: 0.02
   query_strategy: "RandomQuery"
 
 Dataset:
   name: "ISIC"
-  data_dir: "data/ISICPreprocessed"
+  data_dir: "data/ISIC"
   batch_size: 16
   num_workers: 3
-  input_size: 256
+  input_size: 512
 
 Training:
   output_dir: "Baseline"
@@ -24,7 +24,6 @@ Training:
   seed: 3407
   rampup_start: 2000
   rampup_end: 35000
-  regularize_w: 0.1
 
 
 Network:
